Fix command execute